# libgunshotmatch

./: .bumpversion.cfg  .pre-commit-config.yaml  CONTRIBUTING.rst  LICENSE  README.rst  formate.toml  pyproject.toml  repo_helper.yml  requirements.txt  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
doc-source/: Source.rst  conf.py  contributing.rst  index.rst  license.rst  remove_factory_defaults.py  requirements.txt
doc-source/api/: comparison.rst  consolidate.rst  datafile.rst  gzip_util.rst  method.rst  peak.rst  project.rst  search.rst  utils.rst
libgunshotmatch/: __init__.py  consolidate.py  datafile.py  gzip_util.py  peak.py  project.py  utils.py
libgunshotmatch/comparison/: __init__.py  projects.py
libgunshotmatch/consolidate/: __init__.py  _fields.py
libgunshotmatch/method/: __init__.py
tests/: ELEY_1_SUBTRACT.gsmd  ELEY_2_SUBTRACT.gsmd  ELEY_3_SUBTRACT.gsmd  ELEY_4_SUBTRACT.gsmd  ELEY_5_SUBTRACT.gsmd  conftest.py  requirements.txt  test_comparison.py  test_consolidate.py  test_datafile.py  test_gzip_util.py  test_method.py  test_peak.py  test_project.py  test_search.py  test_utils.py
tests/test_comparison_/: test_align_project_and_unknown.csv  test_align_project_and_unknown.txt  test_align_project_and_unknown.yml  test_align_two_projects_and_unknown.csv  test_align_two_projects_and_unknown.txt
tests/test_consolidate_/: test_combine_spectra.yml  test_consolidate.txt  test_consolidate.yml  test_inverted_consolidate.txt  (+2 more)
(+34 files in other folders)
